@@ -18,6 +18,7 @@
 -update font with rendering adjustment.
 -update event peek option of all types.
 -update event methods to optimize.
+-update draw methods to optimize with optional rect return.
 
 0.27    2015-04-12
 -update font to enhance fonts access.
